# gst-mcp

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/gst_mcp/: __init__.py  caps.py  docs.py  examples.py  pipeline.py  registry.py  server.py
